fixed icon cutoff

--- a/components/widgets/team_icon/team_icon.scss
+++ b/components/widgets/team_icon/team_icon.scss
@@ -68,7 +68,7 @@
         width: 44px;
         height: 100%;
         &.TeamIcon__lg {
-            width: 98px;
+            width: 94px;
         }
 
         &.TeamIcon__sm {
